--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,7 @@ idna==2.10
 importlib-metadata==4.6.0
 iniconfig==1.1.1
 jsonschema==3.2.0
-kiwisolver==1.3.2
+kiwisolver
 matplotlib==3.5.1
 mxnet==1.9.1
 mypy-extensions==0.4.3
