--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "onnx2pytorch"]
 	path = onnx2pytorch
-	url = ../../OU-VECHEV/onnx2pytorch.git
+	url = https://github.com/mnmueller/onnx2pytorch_vnn.git
 [submodule "vnn-comp-2022-sup"]
 	path = vnn-comp-2022-sup
 	url = ../../OU-VECHEV/vnn-comp-2022-sup.git
 [submodule "dnnv"]
 	path = dnnv
-	url = ../../OU-VECHEV/dnnv.git
+	url = https://github.com/mnmueller/dnnv_vnn.git
